# casa-formats-specification

./: LICENSE
.github/workflows/: main.yml
casaio/: MANIFEST.in  README.md  performance.ipynb  pyproject.toml  setup.py
casaio/.github/workflows/: main.yml
casaio/devel/kaitai/ksv/: README.md  ksv_arg.rb
casaio/src/casaio/: __init__.py
casaio/src/casaio/io/: __init__.py  constants.py  data.py  filestream.py  table.py  test.py
casaio/src/casaio/io/managers/: standard.py  tiled.py
casaio/src/casaio/tablestream/c++/: metadata.h
casaio/src/casaio/tablestream/python/: common.py  dtype.py  metadata.py  regular_table_description.py  standard_storage_manager.py  tiled_column_storage_manager.py  tiled_shape_storage_manager.py  tsm_binary_data.py
casaio/src/casaio/tablestream/templates/: common.ksy  dtype.ksy  regular_table_description.ksy  standard_storage_manager_header.ksy  tiled_column_storage_manager.ksy  tiled_shape_storage_manager.ksy  tsm_binary_data.ksy
casaio/src/casaio/tablestream/tools/: __init__.py  array.py
ci/cpp/: CMakeLists.txt  README.rst  test.cpp
devel/kaitai/ksv/: README.md  ksv_arg.rb
src/tablestream/: data.py  example.py  metadata.py
src/tablestream/c++/: dtype.cpp  dtype.h  metadata.cpp
src/tablestream/python/: dtype.py  metadata.py  table_incremental_store.py
src/tablestream/rust/: dtype.rs  metadata.rs
src/tablestream/templates/: incremental_storage_manager.ksy  lock.ksy  metadata.ksy  standard_storage_manager.ksy  tiled_shape_storage_manager.ksy  tsm_binary_data.ksy
